# crud_streamlit

./: docker-compose.yaml  pyproject.toml
backend/: database.py  models.py  router.py  schema.py
